@@ -1,7 +1,5 @@
 AUX supertux-9999-cmakelists.patch 365 RMD160 2f9ee605001b8dd4bd35a27cbc718c181a7c7736 SHA1 e2ade9183de3904fa0412e6b9d1a45f69b52f772 SHA256 d8cb14555f43c1b19ffbd7d46600c4bfd3bdcfbf2839b18f98290c1759c91c20
-DIST supertux-0.3.0.tar.bz2 37101881 RMD160 1c7c54c7e47e7143091f2a8ea73414e8e66ea81f SHA1 3a2b7ff90759982af697ecf62243b4ec2736ac53 SHA256 2d9b5807ba805483bfe5dd675d78f2b5155f1ea0db1fdf5739a028d60b04d9cc
 DIST supertux-0.3.1d.tar.bz2 44560484 RMD160 d8adf8921310d83687b75019345e70721235cb38 SHA1 5d9fd1ee9da7c207ed3294fbc6aa189e68768d93 SHA256 2bdddaeba1e6806d7c6cb17d2ddcbca1e8d4ff3dea7fb7a1139eb0ee01ee9608
-EBUILD supertux-0.3.0.ebuild 841 RMD160 663021e59a16fabd016652e91debc847a05da6e7 SHA1 f2dc9b0792ca69dd8c3090d8eacccf008cb5d043 SHA256 71dc3fcc08621819aec1aaed150ca6ece701d9dec512cd6811a1e6411f08ea6a
-EBUILD supertux-0.3.1.ebuild 838 RMD160 aa60b4bf703f30a066c675e3a559e2290cf29b46 SHA1 43cc03f5babf8c4cddb330eda36990301f1669ad SHA256 caafea57870e3d3174c2527f63b6a8b5e4c946992317158b898a3b4973415481
+EBUILD supertux-0.3.1.ebuild 1021 RMD160 8e993f7ae00d689a54cc7b799576c8ec6bb95a1f SHA1 5a163e13bb09ae5c60ff456d0a56b0af501438cb SHA256 97b7d3d03d98d161f06c9cf44093f7835daafc278b14aa1b16124226f0d3d792
 EBUILD supertux-9999.ebuild 948 RMD160 e27876bf7e1a46ef5cc5cb064cc0f58ac1b39962 SHA1 ab79a91ebeeaa740906bc020f1e5510ea915d22e SHA256 8ad1a32432f2291f1876ed5e496ec8c6c84595b17566835fe04ba58355c62185
-MISC ChangeLog 783 RMD160 8617df12b9f9075584b9919c6833793fca79b064 SHA1 c11ab5e66575191c8774d252707064110eb1f3a4 SHA256 7608bafbf63efc8d2bc5f0d199f07fd988db6c719425dd6350bfc660ccbb24a9
+MISC ChangeLog 940 RMD160 d4f381553f3fe3a41e377e505cf440be2cb37f4c SHA1 9dccde3ae234ebbc73c91b27022aba989afaaf57 SHA256 a355d935fa18f1bf47ff502547ed3871bc90615244da29147df5ded707394e50
