@@ -2,27 +2,25 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit games
-
 DESCRIPTION="A game similar to Super Mario Bros."
 HOMEPAGE="http://super-tux.sourceforge.net"
-SRC_URI=" http://download.berlios.de/supertux/${P}d.tar.bz2"
+SRC_URI="http://download2.berlios.de/${PN}/${P}d.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="debug"
 
 RDEPEND=">=media-libs/libsdl-1.2.4
-	>=media-libs/sdl-image-1.2.2
-	sys-libs/zlib
-	dev-util/ftjam
-	>=dev-games/physfs-1.0.0
-	media-libs/libvorbis
-	media-libs/libogg
-	>=media-libs/openal-1.5.304"
+        >=media-libs/sdl-image-1.2.2
+        sys-libs/zlib
+        >=dev-games/physfs-1.0.0
+        media-libs/libvorbis
+        media-libs/libogg
+        media-libs/openal"
 DEPEND="${RDEPEND}
-	x11-libs/libXt"
+        dev-util/ftjam
+        x11-libs/libXt"
 
 pkg_setup() {
 	games_pkg_setup
@@ -30,12 +28,19 @@ pkg_setup() {
 
 src_compile() {
 	egamesconf \
-		$(use_enable debug) || die "econf failed"
+		$(use_enable debug) \
+		|| die
 	jam || die "jam failed"
 }
 
 src_install() {
-	DESTDIR="${D}" jam install || die "jam install failed"
-	dodoc README || die "dodoc failed"
+	jam -sDESTDIR=${D} -sappdocdir=/usr/share/doc/${PF} \
+		-sapplicationsdir=/usr/share/applications \
+		-spixmapsdir=/usr/share/pixmaps install \
+		|| die "jam install failed"
+
+	# Documentation gzip
+	gzip ${D}/usr/share/doc/${PF}/*
+
 	prepgamesdirs
 }
