@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/supertux
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 
+  06 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> -supertux-0.3.0.ebuild,
+  supertux-0.3.1.ebuild:
+  Removed cruft, added nicer ebuild from voyageur overlay.
+
   24 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> supertux-0.3.0.ebuild,
   supertux-0.3.1.ebuild, supertux-9999.ebuild:
   Fixed depends, minor improvements.
